# thebitlab-tui

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-issue-madre.yml  02-issue-figlia.yml  03-bug.yml  config.yml
.github/workflows/: ci.yml
docs/: architecture.md  conf.py  index.rst  integration.md  roadmap.md
docs/api/: index.rst
docs/architecture/: index.rst  phase-2-contracts.rst  phase-2-verification.rst  phase-3-input-contracts.rst  phase-3-verification.rst  phase-4-adapter-contracts.rst  phase-4-verification.rst  utui-rename-contract.rst
docs/examples/: index.rst
examples/: basic_panels.py  divider_badges.py  modal.py  scroll_view.py  selectable_list.py  student_dashboard_adapter.py  student_dashboard_fixtures.py  terminal_input.py
tests/: test_canvas.py  test_divider_status_badge.py  test_docs_assets.py  test_examples.py  test_geometry.py  test_key_reader.py  test_layout.py  test_list_view.py  test_modal.py  test_phase4_contract.py  test_posix_decoder.py  test_posix_input.py  test_posix_pty.py  test_public_api_docs.py  test_public_api_migration_verifier.py  test_release_metadata.py  test_rename_contract.py  test_renderer.py  test_scroll_view.py  test_student_dashboard_adapter.py  test_student_dashboard_evidence.py  test_styles.py  test_terminal_input_example.py  test_widgets.py  test_windows_decoder.py  test_windows_input.py
tools/: generate_phase4_images.py  verify_distribution_migration.py  verify_public_api_migration.py
(+28 files in other folders)
